# trusted-computations-platform

./: .bazelignore  .bazelrc  .gitignore  .rustfmt.toml  .rustftm.toml  BUILD  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  cargo-bazel-lock.json  cargo-no-std-bazel-lock.json  cargo-no-std-no-avx-bazel-lock.json  flake.nix
.cargo/: config.toml
apps/atomic_counter/app/: BUILD  Cargo.toml  README.md
apps/atomic_counter/app/src/: main.rs
apps/atomic_counter/container/: BUILD  README.md
apps/atomic_counter/container/src/: main.rs
apps/atomic_counter/service/: BUILD  Cargo.toml  README.md  build.rs
apps/atomic_counter/service/proto/: atomic_counter.proto
apps/atomic_counter/service/src/: actor.rs  lib.rs
apps/atomic_counter/service/tests/: integration.rs
apps/atomic_counter_enclave_app/src/: main.rs
apps/ledger/app/: BUILD  Cargo.toml  build.rs
apps/ledger/app/src/: main.rs
apps/ledger/cfc_crypto/: BUILD  Cargo.toml  README.md
apps/ledger/cfc_crypto/src/: lib.rs
apps/ledger/federated_compute/: BUILD  Cargo.toml  README.md  build.rs
apps/ledger/federated_compute/proto/: access_policy.proto  blob_header.proto  ledger.proto
apps/ledger/federated_compute/src/: lib.rs
apps/ledger/service/: BUILD  Cargo.toml  build.rs
apps/ledger/service/proto/: access_policy.proto  blob_header.proto  ledger.proto  ledger_actor.proto
apps/ledger/service/src/: actor.rs  attestation.rs  budget.rs  ledger.rs  lib.rs  test_util.rs
apps/ledger/service/tests/: integration.rs
apps/ledger_app/: Cargo.toml  README.md
apps/ledger_app/src/: main.rs
apps/tablet_cache/: README.md
apps/tablet_cache/app/: BUILD  Cargo.toml
apps/tablet_cache/app/src/: main.rs
apps/tablet_cache/service/: BUILD  Cargo.toml  build.rs
apps/tablet_cache/service/proto/: tablet_cache.proto
apps/tablet_cache/service/src/: actor.rs  lib.rs  mock.rs  store.rs  transaction.rs
apps/tablet_cache/service/src/transaction/: coordinator.rs  data.rs  manager.rs  metadata.rs  result.rs
apps/tablet_store/: README.md
apps/tablet_store/app/: BUILD  Cargo.toml
apps/tablet_store/app/src/: main.rs
apps/tablet_store/service/: BUILD  Cargo.toml  build.rs
apps/tablet_store/service/proto/: tablet_store.proto
apps/tablet_store/service/src/: actor.rs  lib.rs
apps/tablet_store/service/tests/: integration.rs
apps/willow/decryptor/: README.md
apps/willow/decryptor/actor/: BUILD  build.rs
apps/willow/decryptor/actor/proto/: willow_decryptor.proto
apps/willow/decryptor/actor/src/: actor.rs  lib.rs
apps/willow/decryptor/actor/tests/: integration.rs
apps/willow/decryptor/container/: BUILD
apps/willow/decryptor/container/src/: main.rs
bazel/: BUILD  crates.bzl  extensions.bzl  stub_repo.bzl
docs/: key_value_store.md
examples/atomic_counter_enclave_app/: Cargo.toml  README.md  build.rs
examples/atomic_counter_enclave_app/src/: main.rs
examples/atomic_counter_service/: Cargo.toml  README.md
examples/atomic_counter_service/src/: lib.rs
integration/: BUILD  Cargo.toml  README.md
integration/src/: harness.rs  lib.rs
proto/: BUILD  Cargo.toml  README.md  build.rs  build_bazel.rs
proto/micro_rpc/: messages.proto
proto/src/: atomic_counter.proto  endpoint.proto  lib.rs
proto_stubs/: README.md
proto_stubs/proto/attestation/: endorsement.proto  evidence.proto  reference_value.proto
proto_stubs/proto/session/: session.proto
runtime/: BUILD  Cargo.toml
runtime/src/: attestation.rs  communication.rs  consensus.rs  driver.rs  encryptor.rs  examples.rs  handshake.rs  lib.rs  logger.rs  mock.rs  model.rs  oak_handshaker.rs  platform.rs  service.rs  session.rs  snapshot.rs  storage.rs  util.rs
runtime/tests/: atomic_counter.rs
scripts/: README.md  build.sh  build_bazel.sh  tests.sh
trusted/: Cargo.toml  build.rs
trusted/proto/: counter.proto  endpoint.proto
trusted/src/: consensus.rs  driver.rs  lib.rs  logger.rs  mock.rs  model.rs  platform.rs  storage.rs  util.rs
trusted/tests/: atomic_counter.rs
