[workspace]
resolver = "2"
members = [
    "apps/atomic_counter/*",
    "apps/ledger/*",
    "apps/tablet_store/*",
    "apps/tablet_cache/*",
    "integration",
    "runtime",
    "proto"
]

[workspace.dependencies]
micro_rpc = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
micro_rpc_build = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_attestation = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_attestation_verification = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_crypto = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_enclave_runtime_support = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_proto_rust = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_restricted_kernel_sdk = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_restricted_kernel_interface = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
oak_session = { git = "https://github.com/project-oak/oak", rev = "cbea9551e47cf0efadc566e573f6aa44574c5cc9" }
raft = { git = "https://github.com/google-parfait/raft-rs", rev = "10968a112dcc4143ad19a1b35b6dca6e30d2e439", package = "raft", default-features = false, features = ["prost-codec"] }
raft-proto = { git = "https://github.com/google-parfait/raft-rs", rev = "10968a112dcc4143ad19a1b35b6dca6e30d2e439", package = "raft-proto", default-features = false, features = ["prost-codec"] }
prost = { version = "0.12.4", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.12.4", default-features = false }
prost-build = { version = "0.12.4" }
ahash = { version = "0.8.11", default-features = false }
sha2 = { version = "*", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14.0" }
