[package]
name = "tcp_integration"
version = "0.1.0"
authors = ["people"]

[features]
default = []
std = ["slog-term", "slog/std"]

[dependencies]
raft = { workspace = true }
raft-proto = { workspace = true }
prost = { workspace = true }
hashbrown = { workspace = true }
slog = { version = "2.2", default-features = false }
slog-term = { version = "2.4.0", optional = true}
tcp_proto = { path = "../proto" }
tcp_runtime = { path = "../runtime" }
micro_rpc = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }