[package]
name = "tcp_runtime"
version = "0.1.0"
authors = ["people"]

[features]
default = []
std = ["slog-term", "slog/std", "mockall"]

[dependencies]
raft = { workspace = true }
raft-proto = { workspace = true }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
hashbrown = { version = "0.14.0" }
slog = { version = "2.2", default-features = false }
slog-term = { version = "2.4.0", optional = true }
spin = { version = "0.9.8" }
tcp_proto = { path = "../proto" }
micro_rpc = { workspace = true }
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]

[build-dependencies]
prost-build = { version = "0.11" }
