[package]
name = "trusted"
version = "0.1.0"
authors = ["people"]

[features]
default = ["prost-codec"]
std = ["slog-term", "slog/std"]
prost-codec = ["raft/prost-codec", "raft-proto/prost-codec"]
protobuf-codec = ["raft/protobuf-codec", "protobuf"]

[dependencies]
raft = { workspace = true }
raft-proto = { workspace = true }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
protobuf = { version = "2", optional = true }
hashbrown = { version = "0.14.0" }
slog = { version = "2.2", default-features = false }
slog-term = { version = "2.4.0", optional = true }
spin = { version = "0.9.8" }

[dev-dependencies]
mockall = { version = "0.11.4" }

[build-dependencies]
prost-build = { version = "0.11" }
