cargo-features = ["per-package-target"]

[package]
name = "tcp_atomic_counter_enclave_app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
forced-target = "x86_64-unknown-none"

[dependencies]
micro_rpc = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true }
oak_restricted_kernel_interface = { workspace = true }
tcp_proto = { path = "../../../proto" }
tcp_runtime = { path = "../../../runtime" }
tcp_atomic_counter_service = { path = "../service" }

[[bin]]
name = "tcp_atomic_counter_enclave_app"
test = false
bench = false