[package]
name = "federated_compute"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
micro_rpc = { workspace = true }
oak_proto_rust = { workspace = true }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
prost-types = { version = "*", default-features = false }

[build-dependencies]
micro_rpc_build = { workspace = true }