[package]
name = "tcp_ledger_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
std = ["tcp_runtime/std"]

[dependencies]
byteorder = { version = "*", default-features = false }
micro_rpc = { workspace = true }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
prost-types = { version = "*", default-features = false }
sha2 = { version = "*", default-features = false }
anyhow = { version = "*", default-features = false }
rand = { version = "*", default-features = false, features = ["getrandom"] }
cfc_crypto = { path = "../cfc_crypto" }
slog = { version = "2.2", default-features = false }
tcp_runtime = { path = "../../../runtime" }
hpke = { version = "*" }

[dev-dependencies]
mockall = { version = "0.11.4" }
tcp_integration = { path = "../../../integration", features = ["std"] }
tcp_proto = { path = "../../../proto" }

[build-dependencies]
micro_rpc_build = { workspace = true }