[package]
name = "tcp_ledger_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
std = ["tcp_runtime/std"]
testing = []

[dependencies]
anyhow = { version = "*", default-features = false }
byteorder = { version = "*", default-features = false }
cfc_crypto = { path = "../cfc_crypto" }
coset = { version = "*", default-features = false }
federated_compute = { path = "../federated_compute" }
hpke = { version = "*" }
micro_rpc = { workspace = true }
oak_proto_rust = { workspace = true }
oak_attestation = { workspace = true }
oak_attestation_verification = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true }
p256 = { version = "*", default-features = false, features = ["ecdsa"] }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { version = "*", default-features = false, features = ["getrandom"] }
sha2 = { version = "*", default-features = false }
slog = { version = "2.2", default-features = false }
tcp_proto = { path = "../../../proto" }
tcp_runtime = { path = "../../../runtime" }

[dev-dependencies]
googletest = "*"
mockall = { version = "0.11.4" }
oak_attestation = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true, features = ["testing"] }
tcp_integration = { path = "../../../integration" }
tcp_ledger_service = { path = ".", features = ["testing"] }

[build-dependencies]
micro_rpc_build = { workspace = true }