[package]
name = "tcp_tablet_cache_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
std = ["slog-term", "slog/std", "mockall"]

[dependencies]
ahash = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hashbrown = { workspace = true }
slog = { version = "2.2", default-features = false }
slog-term = { version = "2.4.0", optional = true }
tcp_proto = { path = "../../../proto" }
tcp_runtime = { path = "../../../runtime" }
tcp_tablet_store_service = { path = "../../tablet_store/service" }
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]
tcp_integration = { path = "../../../integration", features = ["std"] }

[build-dependencies]
prost-build = { workspace = true }
micro_rpc_build = { workspace = true }
